# EDI_K3_PQC_Project

./: .dockerignore  .gitignore  README.md  package.json  test-login.js
.ccls-cache/@@home@runner@workspace/: @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@bitsperlong.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@errno-base.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@errno.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@posix_types.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@socket.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@sockios.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm@bitsperlong.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm@errno.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm@posix_types.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm@posix_types_64.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm@socket.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm@sockios.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@linux@close_range.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@linux@errno.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@linux@posix_types.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@linux@stddef.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stdarg___gnuc_va_list.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_header_macro.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_max_align_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_null.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_nullptr_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_offsetof.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_ptrdiff_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_size_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_wchar_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@stdarg.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@stddef.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@stdint.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@alloca.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@arpa@inet.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@atomic_wide_counter.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@byteswap.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@confname.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@cpu-set.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@endian.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@endianness.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@environments.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@errno.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@floatn-common.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@floatn.h.blob  (+276 more)
.ccls-cache/@home@runner@workspace/: server@ClientHandler.cpp  server@ClientHandler.cpp.blob  server@ClientHandler.h  server@ClientHandler.h.blob  server@Connection.cpp  server@Connection.cpp.blob  server@Connection.h  server@Connection.h.blob  server@Message.cpp  server@Message.cpp.blob  server@Message.h.blob  server@Server.cpp  server@Server.cpp.blob  server@Server.h  server@Server.h.blob  server@User.cpp  server@User.cpp.blob  server@User.h  server@User.h.blob  server@encryption.cpp  server@encryption.cpp.blob  server@encryption.h  server@encryption.h.blob  server@encryption_enhanced.cpp  server@encryption_enhanced.cpp.blob  server@encryption_enhanced.h  server@encryption_enhanced.h.blob  server@main.cpp  server@main.cpp.blob
react-chat-app/: .env.example  aiService.js  crypto.js  generate_ssl_cert.cjs  hash_passwords.cjs  index.html  package.json  server.js  supabaseClient.js  test-animation-integration.jsx  webpack.config.cjs
react-chat-app/crypto/: kyber.js
react-chat-app/public/animations/: bot.json  broadcast.json  login.json  message.json  notification.json  received.json  send.json  sending.json  sparkle.json  typing.json  user.json
react-chat-app/src/: App.css  App.jsx  animations.css  index.css
react-chat-app/src/animations/: loading.json  success.json  typing.json
react-chat-app/src/components/: AnimationTest.jsx  (+2 more)
react-chat-app/utils/: presenceStore.js
server/: CMakeLists.txt  CREDENTIALS_SECURITY.md  ClientHandler.cpp  ClientHandler.h  Connection.cpp  Connection.h  IMMEDIATE_ACTION_REQUIRED.md  Logger.cpp  Logger.h  Message.h  PQC_README.md  Server.cpp  Server.h  User.cpp  encryption.cpp  encryption.h  encryption_enhanced.cpp  encryption_enhanced.h  main.cpp  password_hash.cpp  password_hash.h  pq_kem.cpp  pq_kem.h  pq_sign.cpp  pq_sign.h  remove_credentials_from_history.ps1  remove_credentials_from_history.sh  test_encryption.cpp  test_pqc.cpp  users.json.example
(+40 files in other folders)
